--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="js/slick/slick.css" />
         <link rel="stylesheet" href="js/revealator/fm.revealator.jquery.min.css" />
         <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css">
+        <link rel="stylesheet" href="js/chosen/chosen.css" />
+        <link rel="stylesheet" href="js/jquery-ui-1.12.1.custom/jquery-ui.css" />
 
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
@@ -20,6 +22,9 @@
         <script src="js/revealator/fm.revealator.jquery.min.js"></script>
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/fancybox/jquery.fancybox.min.js"></script>
+        <script src="js/chosen/chosen.jquery.min.js"></script>
+        <script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+        <script src="js/jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
@@ -340,15 +345,15 @@
                 <div class="main-history" data-parallax-bg-image="images/main-history.jpg" data-parallax-bg-position="center 200px" data-parallax-bg-size="auto" data-parallax-bg-speed="1">
                     <div class="container">
                         <div class="main-history-descr">
-                            <div class="main-history-title revealator-fade revealator-once revealator-position-partially-below">Наши истории —</div>
-                            <div class="main-history-text revealator-fade revealator-once revealator-position-partially-below">
+                            <div class="main-history-title revealator-fade revealator-once revealator-position-partially-below revealator-duration1">Наши истории —</div>
+                            <div class="main-history-text revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                 <p>это способ говорить с миром о красоте. Одноименные инсталляции и декор — лишь следствие, их воплощение с помощью воздушных шаров и арт-конструкций.</p>
                                 <p>Мы очень рады делиться с вами своими идеями, смотреть с оптимизмом в будущее, жить, вдыхая полной грудью и радуясь каждому новому дню.</p>
                                 <p><a href="#"><strong>Посмотреть все наши истории</strong></a></p>
                             </div>
                         </div>
                         <div class="main-history-list">
-                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below">
+                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                 <div class="main-history-item-preview"><a href="#"><img src="files/main-history-1.jpg" alt="" /></a></div>
                                 <div class="main-history-item-text">
                                     <div class="main-history-item-category">/ Декор</div>
@@ -357,7 +362,7 @@
                                     <div class="main-history-item-link"><a href="#">Фотоотчет</a></div>
                                 </div>
                             </div>
-                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below">
+                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                 <div class="main-history-item-preview"><a href="#"><img src="files/main-history-2.jpg" alt="" /></a></div>
                                 <div class="main-history-item-text">
                                     <div class="main-history-item-category">/ Дети</div>
@@ -366,7 +371,7 @@
                                     <div class="main-history-item-link"><a href="#">Фотоотчет</a></div>
                                 </div>
                             </div>
-                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below">
+                            <div class="main-history-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                 <div class="main-history-item-preview"><a href="#"><img src="files/main-history-3.jpg" alt="" /></a></div>
                                 <div class="main-history-item-text">
                                     <div class="main-history-item-category">/ Бизнес</div>
@@ -385,7 +390,7 @@
                     <div class="container">
                         <div class="main-how-list">
                             <div class="main-how-list-inner">
-                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-item">
                                         <div class="main-how-list-item-icon-wrap">
                                             <div class="main-how-list-item-icon main-how-list-item-icon-1"></div>
@@ -400,12 +405,12 @@
                                         <div class="main-how-list-item-title">Выезд на объект</div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-row-down-inner main-how-list-row-down-right">
                                         <div class="main-how-list-row-down-icon"></div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-item">
                                         <div class="main-how-list-item-icon-wrap">
                                             <div class="main-how-list-item-icon main-how-list-item-icon-4"></div>
@@ -420,12 +425,12 @@
                                         <div class="main-how-list-item-title">Предоплата</div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-row-down-inner main-how-list-row-down-left">
                                         <div class="main-how-list-row-down-icon"></div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-item">
                                         <div class="main-how-list-item-icon-wrap">
                                             <div class="main-how-list-item-icon main-how-list-item-icon-5"></div>
@@ -440,12 +445,12 @@
                                         <div class="main-how-list-item-title">Производство</div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row-down revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-row-down-inner main-how-list-row-down-right">
                                         <div class="main-how-list-row-down-icon"></div>
                                     </div>
                                 </div>
-                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below">
+                                <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                     <div class="main-how-list-item">
                                         <div class="main-how-list-item-icon-wrap">
                                             <div class="main-how-list-item-icon main-how-list-item-icon-8"></div>
@@ -462,7 +467,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="main-how-text revealator-fade revealator-once revealator-position-partially-below">
+                        <div class="main-how-text revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                             <div class="main-how-title">Как мы<br /> работает</div>
                             <p>Наши заказчики лучшие в мире — они позволяют реализоваться в новых, сложных, интереснейших проектах.</p>
                             <p>Среди клиентов, как небольшие, так и крупные компании, но&nbsp;вне зависимости от крутизны бренда мы с одинаковой ответственностью и старанием подходим к решению поставленных задач.</p>
@@ -480,12 +485,12 @@
                             <div class="main-partners-title">Наши партнеры</div>
                         </div>
                         <div class="main-partners-list">
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="http://globospayaso.com/" target="_blank"><img src="files/partner-01.png" alt="" /><img src="files/partner-01-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="http://www.belbal.com/" target="_blank"><img src="files/partner-02.png" alt="" /><img src="files/partner-02-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="http://www.flexmetal.org/?page_id=15042" target="_blank"><img src="files/partner-03.png" alt="" /><img src="files/partner-03-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="https://anagramballoons.com/" target="_blank"><img src="files/partner-04.png" alt="" /><img src="files/partner-04-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="https://us.qualatex.com/en-us/" target="_blank"><img src="files/partner-05.png" alt="" /><img src="files/partner-05-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below"><a href="http://www.gemar.it/it" target="_blank"><img src="files/partner-06.png" alt="" /><img src="files/partner-06-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://globospayaso.com/" target="_blank"><img src="files/partner-01.png" alt="" /><img src="files/partner-01-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.belbal.com/" target="_blank"><img src="files/partner-02.png" alt="" /><img src="files/partner-02-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.flexmetal.org/?page_id=15042" target="_blank"><img src="files/partner-03.png" alt="" /><img src="files/partner-03-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://anagramballoons.com/" target="_blank"><img src="files/partner-04.png" alt="" /><img src="files/partner-04-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://us.qualatex.com/en-us/" target="_blank"><img src="files/partner-05.png" alt="" /><img src="files/partner-05-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.gemar.it/it" target="_blank"><img src="files/partner-06.png" alt="" /><img src="files/partner-06-hover.png" alt="" /></a></div>
                         </div>
                     </div>
                 </div>
