--- a/stories_inside.html
+++ b/stories_inside.html
@@ -47,7 +47,7 @@
 
                         <nav>
                             <ul>
-                                <li class="active"><a href="#">Праздник</a></li>
+                                <li><a href="#">Праздник</a></li>
                                 <li><a href="#">Декор</a></li>
                                 <li><a href="#">Леди</a></li>
                                 <li><a href="#">Джентельмены</a></li>
@@ -69,8 +69,8 @@
 
                         <!-- content header -->
                         <div class="content-header">
-                            <div class="breadcrumbs"><a href="#">Главная</a> / <a href="#">Праздник</a> / День рождения</div>
-                            <div class="content-header-title">День рождения</div>
+                            <div class="breadcrumbs"><a href="#">Главная</a> / Наши истории</div>
+                            <div class="content-header-title">Наши истории</div>
                         </div>
                         <!-- content header END -->
 
@@ -79,10 +79,10 @@
 
                             <!-- service gallery -->
                             <div class="service-gallery">
-                                <div class="service-gallery-big"><img src="files/service-gallery-big-1.jpg" alt="" /></div>
+                                <div class="service-gallery-big"><img src="files/story-gallery-big-1.jpg" alt="" /></div>
                                 <div class="service-gallery-preview">
                                     <ul>
-                                        <li class="active"><a href="files/service-gallery-big-1.jpg" rel="files/service-gallery-max-1.jpg"><img src="files/service-gallery-preview-1.jpg" alt="" /></a></li>
+                                        <li class="active"><a href="files/story-gallery-big-1.jpg" rel="files/story-gallery-max-1.jpg"><img src="files/story-gallery-preview-1.jpg" alt="" /></a></li>
                                         <li><a href="files/service-gallery-big-2.jpg" rel="files/service-gallery-max-2.jpg"><img src="files/service-gallery-preview-2.jpg" alt="" /></a></li>
                                         <li><a href="files/service-gallery-big-3.jpg" rel="files/service-gallery-max-3.jpg"><img src="files/service-gallery-preview-3.jpg" alt="" /></a></li>
                                         <li><a href="files/service-gallery-big-4.jpg" rel="files/service-gallery-max-4.jpg"><img src="files/service-gallery-preview-4.jpg" alt="" /></a></li>
@@ -93,58 +93,24 @@
 
                             <!-- service text -->
                             <div class="service-text">
-                                <div class="service-title">Итальянские шары</div>
-                                <div class="service-descr">Итальянские шары ручной работы из&nbsp;мурманского латекса - это&nbsp;лучшее украшение для вашей помолвки!</div>
-                                <div class="service-price"><strong>от 20 000</strong> <span class="rubl">₽</span></div>
-                                <div class="service-order-link"><a href="windows/order.html" class="window-link"><span class="service-order-link-text">Заказать оформление</span></a></div>
+                                <div class="story-category">/ Бизнес</div>
+                                <div class="story-title">Новый год в&nbsp;«Газпроме»</div>
+                                <div class="story-descr">С размахом и шиком отпраздновал Газпром в 2017-м году День народного единства! Гостям были подарены ценные подарки, а волшебную атмосферу праздника обеспечивали мы с помощью уникальной арт-инсталляции из шаров под называние «Газовая труба на фоне морского заката». Не осталось ни одного недовольного гостя!</div>
+                                <div class="story-order-link"><a href="windows/order.html" class="window-link"><span class="story-order-link-text">Хочу так же!</span></a></div>
                             </div>
                             <!-- service text END -->
 
                         </div>
                         <!-- service END -->
 
-                        <!-- service balls -->
-                        <div class="service-balls">
-                            <div class="service-balls-title">Шары</div>
-                            <div class="service-balls-list">
-                                <div class="service-balls-list-inner">
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- service balls END -->
-
                     </div>
                 </div>
                 <!-- content END -->
 
-                <!-- service call -->
-                <div class="service-call" data-parallax-bg-image="images/main-how.jpg" data-parallax-bg-position="center top" data-parallax-bg-size="auto" data-parallax-bg-speed="1">
-                    <div class="container">
-                        <div class="service-call-inner">
-                            <div class="service-call-title">Позвоните<br /> нам</div>
-                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
-                            <div class="service-call-link"><a href="windows/order.html" class="window-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- service call END -->
-
                 <!-- service stories -->
-                <div class="service-stories">
+                <div class="service-stories service-stories-inner">
                     <div class="container">
-                        <div class="service-stories-title">Последние<br /> проекты</div>
+                        <div class="service-stories-title">Другие<br /> истории</div>
                         <div class="stories-list">
                             <div class="stories-item">
                                 <a href="#">
@@ -179,6 +145,18 @@
                     </div>
                 </div>
                 <!-- service stories END -->
+
+                <!-- service call -->
+                <div class="service-call" data-parallax-bg-image="images/main-how.jpg" data-parallax-bg-position="center top" data-parallax-bg-size="auto" data-parallax-bg-speed="1">
+                    <div class="container">
+                        <div class="service-call-inner">
+                            <div class="service-call-title">Позвоните<br /> нам</div>
+                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
+                            <div class="service-call-link"><a href="windows/order.html" class="window-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- service call END -->
 
                 <!-- service other -->
                 <div class="service-other">
