--- a/services.html
+++ b/services.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="js/slick/slick.css" />
         <link rel="stylesheet" href="js/revealator/fm.revealator.jquery.min.css" />
         <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css">
+        <link rel="stylesheet" href="js/chosen/chosen.css" />
+        <link rel="stylesheet" href="js/jquery-ui-1.12.1.custom/jquery-ui.css" />
 
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/slick/slick.min.js"></script>
@@ -20,6 +22,9 @@
         <script src="js/revealator/fm.revealator.jquery.min.js"></script>
         <script src="js/isotope.pkgd.min.js"></script>
         <script src="js/fancybox/jquery.fancybox.min.js"></script>
+        <script src="js/chosen/chosen.jquery.min.js"></script>
+        <script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+        <script src="js/jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
