--- a/services_inside.html
+++ b/services_inside.html
@@ -43,6 +43,8 @@
 
                         <div class="title">арт-декор<br /> оформление праздников</div>
 
+                        <a href="#" class="mobile-menu-link"></a>
+
                         <a href="tel:+74954215551" class="header-phone"></a>
 
                         <nav>
