--- a/windows/success.html
+++ b/windows/success.html
@@ -1,3 +1,5 @@
 <div class="window-order">
-    <div class="window-order-title">Ваша заявка принята</div>
+    <div class="window-success-icon"></div>
+    <div class="window-success-text">Данные успешно отправлены.<br /> Мы скоро свяжемся с вами.</div>
+    <div class="window-success-link"><a href="#" class="window-close-link"><span class="window-success-link-text">OK</span></a></div>
 </div>
