--- a/windows/order.html
+++ b/windows/order.html
@@ -52,5 +52,11 @@
             </div>
         </div>
         <div class="form-submit"><button type="submit"><span class="btn-text">Заказать</span></button></div>
+        <div class="form-loading">
+            <div class="form-loading-content">
+                <div class="form-loading-icon"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></div>
+                <div class="form-loading-text">Отправка данных</div>
+            </div>
+        </div>
     </form>
 </div>
