--- a/about.html
+++ b/about.html
@@ -43,7 +43,26 @@
 
                         <div class="title">арт-декор<br /> оформление праздников</div>
 
-                        <a href="#" class="mobile-menu-link"></a>
+                        <div class="mobile-menu">
+                            <a href="#" class="mobile-menu-link"></a>
+
+                            <div class="mobile-menu-content">
+                                <ul>
+                                    <li><a href="#">Праздник</a></li>
+                                    <li><a href="#">Декор</a></li>
+                                    <li><a href="#">Леди</a></li>
+                                    <li><a href="#">Джентельмены</a></li>
+                                    <li><a href="#">Дети</a></li>
+                                    <li><a href="#">Бизнес</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <a href="tel:+74954215551" class="header-phone"></a>
 
@@ -60,6 +79,15 @@
 
                         <div class="menu-add">
                             <div class="menu-add-icon"></div>
+                            <div class="menu-add-content">
+                                <div class="menu-add-close"></div>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
@@ -81,7 +109,7 @@
                                 <div class="about-title">Bigball7 – больше,<br /> чем атмосфера</div>
                                 <div class="about-text">
                                     <p>Это образ жизни, частью которого является студия, основанная в&nbsp;2017 году на базе University of the Arts London.</p>
-                                    <p>Дословно мы предлагаем вам «<a href="#">Попробовать Радость</a>» с помощью атмосферы созданной для вас нашими декораторами и художниками.</p>
+                                    <p>Дословно мы предлагаем вам «<a href="windows/order.html" class="window-link dots-link">Попробовать Радость</a>» с помощью атмосферы созданной для вас нашими декораторами и художниками.</p>
                                 </div>
                             </div>
                             <div class="about-block-2">
