--- a/main.html
+++ b/main.html
@@ -43,7 +43,26 @@
 
                         <div class="title">арт-декор<br /> оформление праздников</div>
 
-                        <a href="#" class="mobile-menu-link"></a>
+                        <div class="mobile-menu">
+                            <a href="#" class="mobile-menu-link"></a>
+
+                            <div class="mobile-menu-content">
+                                <ul>
+                                    <li><a href="#">Праздник</a></li>
+                                    <li><a href="#">Декор</a></li>
+                                    <li><a href="#">Леди</a></li>
+                                    <li><a href="#">Джентельмены</a></li>
+                                    <li><a href="#">Дети</a></li>
+                                    <li><a href="#">Бизнес</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <a href="tel:+74954215551" class="header-phone"></a>
 
@@ -60,6 +79,15 @@
 
                         <div class="menu-add">
                             <div class="menu-add-icon"></div>
+                            <div class="menu-add-content">
+                                <div class="menu-add-close"></div>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
@@ -347,7 +375,7 @@
                 <div class="main-history" data-parallax-bg-image="images/main-history.jpg" data-parallax-bg-position="center 200px" data-parallax-bg-size="auto" data-parallax-bg-speed="1">
                     <div class="container">
                         <div class="main-history-descr">
-                            <div class="main-history-title revealator-fade revealator-once revealator-position-partially-below revealator-duration1">Наши истории —</div>
+                            <div class="main-history-title revealator-fade revealator-once revealator-position-partially-below revealator-duration1">Наши<br /> истории —</div>
                             <div class="main-history-text revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
                                 <p>это способ говорить с миром о красоте. Одноименные инсталляции и декор — лишь следствие, их воплощение с помощью воздушных шаров и арт-конструкций.</p>
                                 <p>Мы очень рады делиться с вами своими идеями, смотреть с оптимизмом в будущее, жить, вдыхая полной грудью и радуясь каждому новому дню.</p>
@@ -453,18 +481,11 @@
                                     </div>
                                 </div>
                                 <div class="main-how-list-row revealator-fade revealator-once revealator-position-partially-below revealator-duration1">
-                                    <div class="main-how-list-item">
+                                    <div class="main-how-list-item main-how-list-item-right">
                                         <div class="main-how-list-item-icon-wrap">
                                             <div class="main-how-list-item-icon main-how-list-item-icon-8"></div>
                                         </div>
-                                        <div class="main-how-list-item-title">Доставка</div>
-                                    </div>
-                                    <div class="main-how-list-sep"><div class="main-how-list-sep-inner main-how-list-sep-left"></div></div>
-                                    <div class="main-how-list-item">
-                                        <div class="main-how-list-item-icon-wrap">
-                                            <div class="main-how-list-item-icon main-how-list-item-icon-7"></div>
-                                        </div>
-                                        <div class="main-how-list-item-title">Монтаж</div>
+                                        <div class="main-how-list-item-title">Доставка и монтаж</div>
                                     </div>
                                 </div>
                             </div>
@@ -487,12 +508,14 @@
                             <div class="main-partners-title">Наши партнеры</div>
                         </div>
                         <div class="main-partners-list">
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://globospayaso.com/" target="_blank"><img src="files/partner-01.png" alt="" /><img src="files/partner-01-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.belbal.com/" target="_blank"><img src="files/partner-02.png" alt="" /><img src="files/partner-02-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.flexmetal.org/?page_id=15042" target="_blank"><img src="files/partner-03.png" alt="" /><img src="files/partner-03-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://anagramballoons.com/" target="_blank"><img src="files/partner-04.png" alt="" /><img src="files/partner-04-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://us.qualatex.com/en-us/" target="_blank"><img src="files/partner-05.png" alt="" /><img src="files/partner-05-hover.png" alt="" /></a></div>
-                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.gemar.it/it" target="_blank"><img src="files/partner-06.png" alt="" /><img src="files/partner-06-hover.png" alt="" /></a></div>
+                            <div class="main-partners-item main-partners-item-big revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://globospayaso.com/" target="_blank"><img src="files/partner-01.png" alt="" width="149" /><img src="files/partner-01-hover.png" alt="" width="149" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://anagramballoons.com/" target="_blank"><img src="files/partner-02.png" alt="" width="172" /><img src="files/partner-02-hover.png" alt="" width="172" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.belbal.com/" target="_blank"><img src="files/partner-03.png" alt="" width="146" /><img src="files/partner-03-hover.png" alt="" width="146" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.sempertex.com/home" target="_blank"><img src="files/partner-04.png" alt="" width="189" /><img src="files/partner-04-hover.png" alt="" width="189" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.flexmetal.org/?page_id=15042" target="_blank"><img src="files/partner-05.png" alt="" width="95" /><img src="files/partner-05-hover.png" alt="" width="95" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="https://www.amscan.com/worldwide/" target="_blank"><img src="files/partner-06.png" alt="" width="192" /><img src="files/partner-06-hover.png" alt="" width="192" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.betallic.com/" target="_blank"><img src="files/partner-07.png" alt="" width="80" /><img src="files/partner-07-hover.png" alt="" width="80" /></a></div>
+                            <div class="main-partners-item revealator-fade revealator-once revealator-position-partially-below revealator-duration1"><a href="http://www.gemar.it/it" target="_blank"><img src="files/partner-08.png" alt="" width="147" /><img src="files/partner-08-hover.png" alt="" width="147" /></a></div>
                         </div>
                     </div>
                 </div>
