--- a/services_inside.html
+++ b/services_inside.html
@@ -43,7 +43,26 @@
 
                         <div class="title">арт-декор<br /> оформление праздников</div>
 
-                        <a href="#" class="mobile-menu-link"></a>
+                        <div class="mobile-menu">
+                            <a href="#" class="mobile-menu-link"></a>
+
+                            <div class="mobile-menu-content">
+                                <ul>
+                                    <li><a href="#">Праздник</a></li>
+                                    <li><a href="#">Декор</a></li>
+                                    <li><a href="#">Леди</a></li>
+                                    <li><a href="#">Джентельмены</a></li>
+                                    <li><a href="#">Дети</a></li>
+                                    <li><a href="#">Бизнес</a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
+                        </div>
 
                         <a href="tel:+74954215551" class="header-phone"></a>
 
@@ -60,6 +79,15 @@
 
                         <div class="menu-add">
                             <div class="menu-add-icon"></div>
+                            <div class="menu-add-content">
+                                <div class="menu-add-close"></div>
+                                <ul>
+                                    <li><a href="#">Доставка и оплата</a></li>
+                                    <li><a href="#">Новости</a></li>
+                                    <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Контакты</a></li>
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
@@ -72,12 +100,13 @@
                         <!-- content header -->
                         <div class="content-header">
                             <div class="breadcrumbs"><a href="#">Главная</a> / <a href="#">Праздник</a> / День рождения</div>
-                            <div class="content-header-title">День рождения</div>
                         </div>
                         <!-- content header END -->
 
                         <!-- service -->
                         <div class="service">
+
+                            <div class="service-title-mobile">Итальянские шары</div>
 
                             <!-- service gallery -->
                             <div class="service-gallery">
