--- a/services_inside.html
+++ b/services_inside.html
@@ -56,15 +56,15 @@
                                     <li><a href="#">Бизнес</a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="#">Доставка и оплата</a></li>
-                                    <li><a href="#">Новости</a></li>
                                     <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Наши истории</a></li>
+                                    <li><a href="#">Шары</a></li>
                                     <li><a href="#">Контакты</a></li>
                                 </ul>
                             </div>
                         </div>
 
-                        <a href="tel:+74954215551" class="header-phone"></a>
+                        <a href="tel:+74951207734" class="header-phone"></a>
 
                         <nav>
                             <ul>
@@ -82,9 +82,9 @@
                             <div class="menu-add-content">
                                 <div class="menu-add-close"></div>
                                 <ul>
-                                    <li><a href="#">Доставка и оплата</a></li>
-                                    <li><a href="#">Новости</a></li>
                                     <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Наши истории</a></li>
+                                    <li><a href="#">Шары</a></li>
                                     <li><a href="#">Контакты</a></li>
                                 </ul>
                             </div>
@@ -110,13 +110,28 @@
 
                             <!-- service gallery -->
                             <div class="service-gallery">
-                                <div class="service-gallery-big"><img src="files/service-gallery-big-1.jpg" alt="" /></div>
+                                <div class="service-gallery-big">
+                                    <div class="service-gallery-big-list">
+                                        <div class="service-gallery-big-item">
+                                            <a href="files/service-gallery-max-1.jpg" data-fancybox="gallery"><img src="files/service-gallery-big-1.jpg" alt="" /></a>
+                                        </div>
+                                        <div class="service-gallery-big-item">
+                                            <a href="files/service-gallery-max-2.jpg" data-fancybox="gallery"><img src="files/service-gallery-big-2.jpg" alt="" /></a>
+                                        </div>
+                                        <div class="service-gallery-big-item">
+                                            <a href="files/service-gallery-max-3.jpg" data-fancybox="gallery"><img src="files/service-gallery-big-3.jpg" alt="" /></a>
+                                        </div>
+                                        <div class="service-gallery-big-item">
+                                            <a href="files/service-gallery-max-4.jpg" data-fancybox="gallery"><img src="files/service-gallery-big-4.jpg" alt="" /></a>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="service-gallery-preview">
                                     <ul>
-                                        <li class="active"><a href="files/service-gallery-big-1.jpg" rel="files/service-gallery-max-1.jpg"><img src="files/service-gallery-preview-1.jpg" alt="" /></a></li>
-                                        <li><a href="files/service-gallery-big-2.jpg" rel="files/service-gallery-max-2.jpg"><img src="files/service-gallery-preview-2.jpg" alt="" /></a></li>
-                                        <li><a href="files/service-gallery-big-3.jpg" rel="files/service-gallery-max-3.jpg"><img src="files/service-gallery-preview-3.jpg" alt="" /></a></li>
-                                        <li><a href="files/service-gallery-big-4.jpg" rel="files/service-gallery-max-4.jpg"><img src="files/service-gallery-preview-4.jpg" alt="" /></a></li>
+                                        <li class="active"><a href="#"><img src="files/service-gallery-preview-1.jpg" alt="" /></a></li>
+                                        <li><a href="#"><img src="files/service-gallery-preview-2.jpg" alt="" /></a></li>
+                                        <li><a href="#"><img src="files/service-gallery-preview-3.jpg" alt="" /></a></li>
+                                        <li><a href="#"><img src="files/service-gallery-preview-4.jpg" alt="" /></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -134,31 +149,33 @@
                         </div>
                         <!-- service END -->
 
-                        <!-- service balls -->
-                        <div class="service-balls">
-                            <div class="service-balls-title">Шары</div>
-                            <div class="service-balls-list">
-                                <div class="service-balls-list-inner">
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                    <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- service balls END -->
-
                     </div>
                 </div>
                 <!-- content END -->
+
+                <!-- service balls -->
+                <div class="service-balls">
+                    <div class="container">
+                        <div class="service-balls-title">Шары</div>
+                        <div class="service-balls-list">
+                            <div class="service-balls-list-inner">
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- service balls END -->
 
                 <!-- service call -->
                 <div class="service-call" data-parallax-bg-image="images/main-how.jpg" data-parallax-bg-position="center top" data-parallax-bg-size="auto" data-parallax-bg-speed="1">
@@ -258,6 +275,12 @@
                                     <div class="service-other-item-title">Валентинов день</div>
                                 </a>
                             </div>
+                            <div class="service-other-item">
+                                <a href="#">
+                                    <div class="service-other-item-preview"><img src="files/service-other-1.jpg" alt="" /></div>
+                                    <div class="service-other-item-title">8 марта</div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -288,7 +311,8 @@
                 </div>
                 <div class="footer-menu">
                     <ul>
-                        <li><a href="#">О компании</a></li>
+                        <li><a href="#">О студии</a></li>
+                        <li><a href="#">Наши истории</a></li>
                         <li><a href="#">Шары</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
@@ -296,12 +320,10 @@
                 <div class="footer-contacts">
                     <div class="footer-social">
                         <a href="#" class="footer-social-fb" target="_blank"></a>
-                        <a href="#" class="footer-social-vk" target="_blank"></a>
                         <a href="#" class="footer-social-ig" target="_blank"></a>
-                        <a href="#" class="footer-social-tw" target="_blank"></a>
                     </div>
-                    <div class="footer-phone">+7 495 <strong>421-55-51</strong></div>
-                    <div class="footer-email"><a href="mailto:info@bigball7.ru">info@bigball7.ru</a></div>
+                    <div class="footer-phone"><a href="tel:+74951207734">+7 495 <strong>120-77-34</strong></a></div>
+                    <div class="footer-email"><a href="mailto:my@bigball7.ru">my@bigball7.ru</a></div>
                     <div class="developer">
                         <p>Концепция – <a href="http://www.ipaulus.com" target="_blank">iPaulusDesign</a>.</p>
                         <p>Дизайн и разработка – <a href="http://bilingo.ru" target="_blank">Bilingo</a>.</p>
