--- a/services.html
+++ b/services.html
@@ -56,15 +56,15 @@
                                     <li><a href="#">Бизнес</a></li>
                                 </ul>
                                 <ul>
-                                    <li><a href="#">Доставка и оплата</a></li>
-                                    <li><a href="#">Новости</a></li>
                                     <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Наши истории</a></li>
+                                    <li><a href="#">Шары</a></li>
                                     <li><a href="#">Контакты</a></li>
                                 </ul>
                             </div>
                         </div>
 
-                        <a href="tel:+74954215551" class="header-phone"></a>
+                        <a href="tel:+74951207734" class="header-phone"></a>
 
                         <nav>
                             <ul>
@@ -82,9 +82,9 @@
                             <div class="menu-add-content">
                                 <div class="menu-add-close"></div>
                                 <ul>
-                                    <li><a href="#">Доставка и оплата</a></li>
-                                    <li><a href="#">Новости</a></li>
                                     <li><a href="#">О студии</a></li>
+                                    <li><a href="#">Наши истории</a></li>
+                                    <li><a href="#">Шары</a></li>
                                     <li><a href="#">Контакты</a></li>
                                 </ul>
                             </div>
@@ -238,7 +238,8 @@
                 </div>
                 <div class="footer-menu">
                     <ul>
-                        <li><a href="#">О компании</a></li>
+                        <li><a href="#">О студии</a></li>
+                        <li><a href="#">Наши истории</a></li>
                         <li><a href="#">Шары</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
@@ -246,12 +247,10 @@
                 <div class="footer-contacts">
                     <div class="footer-social">
                         <a href="#" class="footer-social-fb" target="_blank"></a>
-                        <a href="#" class="footer-social-vk" target="_blank"></a>
                         <a href="#" class="footer-social-ig" target="_blank"></a>
-                        <a href="#" class="footer-social-tw" target="_blank"></a>
                     </div>
-                    <div class="footer-phone">+7 495 <strong>421-55-51</strong></div>
-                    <div class="footer-email"><a href="mailto:info@bigball7.ru">info@bigball7.ru</a></div>
+                    <div class="footer-phone"><a href="tel:+74951207734">+7 495 <strong>120-77-34</strong></a></div>
+                    <div class="footer-email"><a href="mailto:my@bigball7.ru">my@bigball7.ru</a></div>
                     <div class="developer">
                         <p>Концепция – <a href="http://www.ipaulus.com" target="_blank">iPaulusDesign</a>.</p>
                         <p>Дизайн и разработка – <a href="http://bilingo.ru" target="_blank">Bilingo</a>.</p>
